# sayo_asm

./: .gitignore  Cargo.toml  LICENSE  README.md  debug.txt  generate-docs.ps1  sayo_instr.csv  sayo_reg.csv
crates/sayo_assembler/: Cargo.toml  description_cn.rs
crates/sayo_assembler/src/: address.rs  binary.rs  encoder.rs  layout.rs  lib.rs  listing.rs  symbol.rs
crates/sayo_ast/: Cargo.toml
crates/sayo_ast/examples/: generate_docs.rs
crates/sayo_ast/src/: ast.rs  instr.rs  lib.rs  reg.rs  span.rs
crates/sayo_lsp/: Cargo.toml
crates/sayo_lsp/src/: main.rs  main.rs.backup
crates/sayo_parser/: Cargo.toml  build.rs
crates/sayo_parser/examples/: parse_file.rs  test_fixes.rs
crates/sayo_parser/src/: error.rs  grammar.lalrpop  lexer.rs  lib.rs  parser.rs
crates/sayo_parser/tests/: README.md  integration_test.rs  test_real_file.rs
crates/sayo_sema/: Cargo.toml  README.md
crates/sayo_sema/examples/: check.rs
crates/sayo_sema/src/: checker.rs  lib.rs  (+1 more)
crates/sayo_uploader/: Cargo.toml
crates/sayo_uploader/src/: main.rs
crates/sayoasm/: Cargo.toml
docs/: COMPLETION_SUMMARY.md  DOC_GENERATION_SUMMARY.md  README.md  assembler_implementation.md  assembler_mvp_plan.md  assembler_usage.md  binary_format.md  instructions.md  registers.md
vs_test/: compile.ps1  main.lst  main.s  main_encoding.s
vscode-extension/: .vscodeignore  DEVELOPMENT.md  LICENSE  language-configuration.json  package-lock.json  package.json
vscode-extension/scripts/: copy-server.js
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: sayo-asm.tmLanguage.json
(+1 files in other folders)
