[package]
name = "sayo-lsp"
version.workspace = true
edition.workspace = true

[dependencies]
sayo_ast = { path = "../sayo_ast" }
sayo_parser = { path = "../sayo_parser" }
sayo_sema = { path = "../sayo_sema" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "sayo-lsp"
path = "src/main.rs"
